[project]
name = "nocturne-api"
version = "0.4"
description = "Terminal API workbench for REST, GraphQL, and WebSockets using Textual."
authors = [{ name = "Superintendent2521" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.44.0",
    "httpx>=0.27.0",
    "websockets>=15.0",
]

[project.scripts]
nocturne = "nocturne_api.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nocturne_api"]

[tool.setuptools.package-data]
nocturne_api = ["app.tcss"]
